# tmux-oil

./: LICENCE.txt  README.md  main.py  pyproject.toml  tmux-oil
tools/: build_binary.py
