[project]
name = "tmux-oil"
version = "0.1.0"
description = "An oil.nvim like buffer to manage your tmux windows in a session"
authors = ["Osztopáni Kristóf <kristofosztopani@gmail.com>"]
license = "MIT"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "libtmux>=0.46.2",
]

[dependency-groups]
dev = [
    "nuitka>=2.8.4",
]

[project.scripts]
build-binary = "tools.build_binary:main"
